[gd_scene load_steps=20 format=3 uid="uid://d2trf1846jb0b"]

[ext_resource type="PackedScene" uid="uid://betvs3gq1xrw7" path="res://GUI/health_bar.tscn" id="1_80edf"]
[ext_resource type="Script" uid="uid://dal06uv2b8l11" path="res://GUI/gui.gd" id="1_qtfhu"]
[ext_resource type="Texture2D" uid="uid://dhyd4qc2si41b" path="res://GUI/DeathGui.png" id="4_2xed4"]
[ext_resource type="Theme" uid="uid://b74hf2cftdmov" path="res://GUI/input_mapper/input_mapper.tres" id="4_rikqw"]
[ext_resource type="Script" uid="uid://baoqwakqjl0f6" path="res://GUI/death_screen.gd" id="5_2xed4"]
[ext_resource type="PackedScene" uid="uid://c4jfi106ve2yu" path="res://GUI/loading_screen.tscn" id="6_li1cn"]
[ext_resource type="Texture2D" uid="uid://bnubnhu1moocx" path="res://GUI/pauseGui.png" id="7_mgksq"]
[ext_resource type="Script" uid="uid://camaq3mjlggfm" path="res://GUI/pause_screen.gd" id="8_kijb2"]
[ext_resource type="Script" uid="uid://djbmlrmf5m7sq" path="res://GUI/options_menu.gd" id="10_j5h0c"]
[ext_resource type="Script" uid="uid://efv0lw07ce4y" path="res://GUI/main_menu.gd" id="11_gedss"]
[ext_resource type="Texture2D" uid="uid://b205wy6yad0ep" path="res://GUI/title_screen_background.png" id="11_hra2n"]
[ext_resource type="Texture2D" uid="uid://1x0amq151cs7" path="res://GUI/title.png" id="12_rikqw"]
[ext_resource type="PackedScene" uid="uid://rnf12mxa410b" path="res://GUI/input_mapper/input_mapper.tscn" id="13_gedss"]
[ext_resource type="Script" uid="uid://bcqowhthhsibn" path="res://GUI/debug_menu.gd" id="13_si67a"]
[ext_resource type="PackedScene" uid="uid://6pbawsjxpl8x" path="res://Interactibles/interact_popup.tscn" id="14_rikqw"]
[ext_resource type="Texture2D" uid="uid://ib0vs278vrw0" path="res://GUI/YOU WIN.png" id="16_3kka3"]
[ext_resource type="PackedScene" uid="uid://b76ly8xg11ojm" path="res://GUI/inventory/inventory.tscn" id="16_4bf3s"]
[ext_resource type="Script" uid="uid://cmosj1esic63u" path="res://GUI/texture_rect.gd" id="17_si67a"]
[ext_resource type="PackedScene" uid="uid://bh4d8h5e1slv8" path="res://GUI/starting_animation.tscn" id="19_stg18"]

[node name="GUI" type="CanvasLayer"]
process_mode = 3
layer = 1000
follow_viewport_scale = 6.0
script = ExtResource("1_qtfhu")

[node name="HealthBarHealths" parent="." instance=ExtResource("1_80edf")]

[node name="DeathScreen" type="TextureRect" parent="."]
visible = false
z_index = 99
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2
theme = ExtResource("4_rikqw")
texture = ExtResource("4_2xed4")
script = ExtResource("5_2xed4")

[node name="RespawnButton" type="Button" parent="DeathScreen"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.072000004
anchor_bottom = 0.066
offset_left = 102.83333
offset_top = 118.500015
offset_right = 668.5934
offset_bottom = 222.21997
scale = Vector2(0.18869714, 0.24293652)
theme = ExtResource("4_rikqw")

[node name="ExitButton" type="Button" parent="DeathScreen"]
layout_mode = 0
offset_left = 129.0
offset_top = 150.0
offset_right = 451.0
offset_bottom = 310.0
scale = Vector2(0.18439238, 0.17757043)
theme = ExtResource("4_rikqw")

[node name="LoadingScreen" parent="." instance=ExtResource("6_li1cn")]
theme = ExtResource("4_rikqw")

[node name="PauseScreen" type="TextureRect" parent="."]
visible = false
z_index = 2
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme = ExtResource("4_rikqw")
texture = ExtResource("7_mgksq")
script = ExtResource("8_kijb2")

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
self_modulate = Color(1, 1, 1, 0.654902)
z_index = -1
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
theme = ExtResource("4_rikqw")
color = Color(0.19434929, 0.19434926, 0.19434926, 1)

[node name="ContinueButton" type="Button" parent="PauseScreen"]
layout_mode = 0
offset_left = 119.0
offset_top = 63.0
offset_right = 201.0
offset_bottom = 91.0
theme = ExtResource("4_rikqw")

[node name="OptionsButton" type="Button" parent="PauseScreen"]
layout_mode = 0
offset_left = 122.0
offset_top = 96.0
offset_right = 198.0
offset_bottom = 124.0
theme = ExtResource("4_rikqw")

[node name="ExitButton" type="Button" parent="PauseScreen"]
layout_mode = 0
offset_left = 136.0
offset_top = 129.0
offset_right = 184.0
offset_bottom = 156.0
theme = ExtResource("4_rikqw")

[node name="OptionsMenu" type="TextureRect" parent="."]
visible = false
z_index = 200
offset_left = 164.0
offset_top = 90.0
offset_right = 204.0
offset_bottom = 130.0
mouse_filter = 2
theme = ExtResource("4_rikqw")
script = ExtResource("10_j5h0c")

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
layout_mode = 0
offset_left = -52.0
offset_top = -50.0
offset_right = 58.0
offset_bottom = 57.0

[node name="KeyBindButton" type="Button" parent="OptionsMenu/VBoxContainer"]
z_index = 201
layout_mode = 2
theme = ExtResource("4_rikqw")
text = "KeyBinds"

[node name="MusicVolumeButton" type="Button" parent="OptionsMenu/VBoxContainer"]
visible = false
z_index = 201
layout_mode = 2
theme = ExtResource("4_rikqw")
text = "Debug"

[node name="BackButton" type="Button" parent="OptionsMenu/VBoxContainer"]
z_index = 201
layout_mode = 2
theme = ExtResource("4_rikqw")
text = "Back"

[node name="BG" type="TextureRect" parent="OptionsMenu"]
z_index = 98
layout_mode = 0
offset_left = -164.0
offset_top = -90.0
offset_right = 164.0
offset_bottom = 90.0
mouse_filter = 2
texture = ExtResource("11_hra2n")

[node name="BG2" type="TextureRect" parent="OptionsMenu"]
z_index = 98
layout_mode = 0
offset_left = -164.0
offset_top = -90.0
offset_right = 164.0
offset_bottom = 90.0
mouse_filter = 2
texture = ExtResource("11_hra2n")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 163.92459
offset_top = 89.798676
offset_right = 203.92459
offset_bottom = 129.79868
mouse_filter = 2
theme = ExtResource("4_rikqw")
script = ExtResource("11_gedss")

[node name="UI" type="TextureRect" parent="MainMenu"]
z_index = 99
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -163.92459
offset_top = -89.798676
offset_right = 116.07541
offset_bottom = 50.201324
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("12_rikqw")

[node name="BG" type="TextureRect" parent="MainMenu"]
z_index = 98
layout_mode = 1
offset_left = -163.92459
offset_top = -89.798676
offset_right = 164.07541
offset_bottom = 90.201324
mouse_filter = 2
texture = ExtResource("11_hra2n")

[node name="BG2" type="TextureRect" parent="MainMenu"]
z_index = 98
layout_mode = 1
offset_left = -163.92459
offset_top = -89.798676
offset_right = 164.07541
offset_bottom = 90.201324
mouse_filter = 2
texture = ExtResource("11_hra2n")

[node name="PlayButton" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = -151.92459
offset_top = -6.7986755
offset_right = -87.92459
offset_bottom = 19.201324
theme = ExtResource("4_rikqw")

[node name="OptionsButton" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = -152.0
offset_top = 24.0
offset_right = -61.0
offset_bottom = 50.0
theme = ExtResource("4_rikqw")

[node name="QuitButton" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = -151.92459
offset_top = 55.201332
offset_right = -99.92459
offset_bottom = 81.20133
theme = ExtResource("4_rikqw")

[node name="DebugMenu" type="Control" parent="."]
visible = false
z_index = 740
layout_mode = 3
anchors_preset = 0
offset_left = 132.0
offset_top = 80.0
offset_right = 172.0
offset_bottom = 120.0
script = ExtResource("13_si67a")

[node name="VBoxContainer" type="VBoxContainer" parent="DebugMenu"]
layout_mode = 0
offset_left = -28.0
offset_top = -24.0
offset_right = 103.0
offset_bottom = 77.0

[node name="Dash" type="Button" parent="DebugMenu/VBoxContainer"]
layout_mode = 2
text = "Enable Dash"

[node name="Crowbar" type="Button" parent="DebugMenu/VBoxContainer"]
layout_mode = 2
text = "Enable Crowbar"

[node name="Back" type="Button" parent="DebugMenu/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="InputMapper" parent="." instance=ExtResource("13_gedss")]
visible = false
z_index = 300

[node name="BackButton" type="Button" parent="InputMapper"]
z_index = 201
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.5
offset_top = -3.0
offset_right = 33.5
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_rikqw")
text = "Back"

[node name="InteractPopup" parent="." instance=ExtResource("14_rikqw")]
visible = false

[node name="Inventory" parent="." instance=ExtResource("16_4bf3s")]
z_index = -1
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("16_3kka3")
script = ExtResource("17_si67a")

[node name="starting animation" parent="." instance=ExtResource("19_stg18")]
visible = false
z_index = 100

[connection signal="pressed" from="DeathScreen/RespawnButton" to="DeathScreen" method="_on_respawn_button_pressed"]
[connection signal="pressed" from="DeathScreen/ExitButton" to="DeathScreen" method="_on_exit_button_pressed"]
[connection signal="pressed" from="PauseScreen/ContinueButton" to="PauseScreen" method="_on_continue_button_pressed"]
[connection signal="pressed" from="PauseScreen/OptionsButton" to="PauseScreen" method="_on_options_button_pressed"]
[connection signal="pressed" from="PauseScreen/ExitButton" to="PauseScreen" method="_on_exit_button_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/KeyBindButton" to="OptionsMenu" method="_on_key_bind_button_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/MusicVolumeButton" to="OptionsMenu" method="_on_music_volume_button_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/BackButton" to="OptionsMenu" method="_on_back_button_pressed"]
[connection signal="pressed" from="MainMenu/PlayButton" to="MainMenu" method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/OptionsButton" to="MainMenu" method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="MainMenu" method="_on_quit_button_pressed"]
[connection signal="pressed" from="InputMapper/BackButton" to="InputMapper" method="_on_back_button_pressed"]
